Resolve IDE problems and warnings
Issue-ID: SO-4252
Change-Id: I46c81ba904b013c95a6ab5bb0aa58fe006166eb6
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>