@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -27,7 +27,7 @@ import org.junit.Test;
 
 public class CvnfcCustomizationTest {
 
-    private static final Integer ID = new Integer(1);
+    private static final Integer ID = Integer.valueOf(1);
     private static final String DESCRIPTION = "testDescription";
     private static final String MODEL_CUSTOMIZATION_UUID = "testModelCustomizationUUID";
     private static final String MODEL_INSTANCE_NAME = "testModelInstanceName";
@@ -54,11 +54,11 @@ public class CvnfcCustomizationTest {
         cvnfcCustomization.setNfcNamingCode(NFC_NAMING_CODE);
         cvnfcCustomization.setToscaNodeType(TOSCA_NODE_TYPE);
         cvnfcCustomization.setVfModuleCustomization(setupVfModuleCustomization());
-        List<CvnfcConfigurationCustomization> cvnfcConfigurationCustomizationSet = new ArrayList();
+        List<CvnfcConfigurationCustomization> cvnfcConfigurationCustomizationSet = new ArrayList<>();
         cvnfcConfigurationCustomizationSet.add(setupCvnfcConfigurationCustomization());
         cvnfcCustomization.setCvnfcConfigurationCustomization(cvnfcConfigurationCustomizationSet);
 
-        assertTrue(cvnfcCustomization.getId().equals(new Integer(1)));
+        assertTrue(cvnfcCustomization.getId().equals(Integer.valueOf(1)));
         assertTrue(cvnfcCustomization.getDescription().equals(DESCRIPTION));
         assertTrue(cvnfcCustomization.getModelCustomizationUUID().equals(MODEL_CUSTOMIZATION_UUID));
         assertTrue(cvnfcCustomization.getModelInstanceName().equals(MODEL_INSTANCE_NAME));
